--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Search Web Application</title>
-    <link rel="stylesheet" href="C:\Users\corey\PycharmProjects\gradAssist605\ui\styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
 <section class="banner" id="banner">
