--- a/templates/index.html
+++ b/templates/index.html
@@ -19,93 +19,45 @@
 <section class="searchbar" id="searchbar">
     <div class="search">
         <h2>Search</h2>
-        <p>
-            We can simply search here. May Remove or change
-        </p>
         <form action="" class="search-bar">
             <input type="text" placeholder="Enter search query" name="q">
             <button type="submit"><img src="C:\Users\corey\PycharmProjects\gradAssist605\ui\images\drink.png"></button>
         </form>
     </div>
     <div class="search-results">
-        <table>
+        <h2>Search Results</h2>
+        <table id="search-table">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Price</th>
-                    <th>Pages</th>
-                    <th>Average Reviews</th>
-                    <th>Language</th>
+                    <th>Customer ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                    <th>Street</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Zipcode</th>
                 </tr>
             </thead>
             <tbody>
-                {% for row in result %}
-                <tr>
-                    <td>{{ row[0] }}</td>
-                    <td>{{ row[1] }}</td>
-                    <td>{{ row[2] }}</td>
-                    <td>{{ row[3] }}</td>
-                    <td>{{ row[4] }}</td>
-                    <td>{{ row[5] }}</td>
-                </tr>
+                {% for customer in customers %}
+                    <tr>
+                        <td>{{ customer.customer_id }}</td>
+                        <td>{{ customer.first_name }}</td>
+                        <td>{{ customer.last_name }}</td>
+                        <td>{{ customer.phone }}</td>
+                        <td>{{ customer.email }}</td>
+                        <td>{{ customer.street }}</td>
+                        <td>{{ customer.city }}</td>
+                        <td>{{ customer.state }}</td>
+                        <td>{{ customer.zipcode }}</td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </section>
 
-<section class="sql-query" id="sql-query">
-    <div class="form">
-        <h2>SQL Query Form</h2>
-        <form action="/execute_query" method="post">
-            <label for="title">Title:</label><br>
-            <input type="text" id="title" name="title"><br>
-
-            <label for="author">Author:</label><br>
-            <input type="text" id="author" name="author"><br>
-
-            <label for="price">Price:</label><br>
-            <input type="text" id="price" name="price"><br>
-
-            <label for="pages">Pages:</label><br>
-            <input type="text" id="pages" name="pages"><br>
-
-            <label for="avg_reviews">Average Reviews:</label><br>
-            <input type="text" id="avg_reviews" name="avg_reviews"><br>
-
-            <label for="language">Language:</label><br>
-            <input type="text" id="language" name="language"><br>
-
-            <input type="submit" value="Execute Query">
-        </form>
-    </div>
-    <div class="query-results">
-        <table>
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Price</th>
-                    <th>Pages</th>
-                    <th>Average Reviews</th>
-                    <th>Language</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in result %}
-                <tr>
-                    <td>{{ row[0] }}</td>
-                    <td>{{ row[1] }}</td>
-                    <td>{{ row[2] }}</td>
-                    <td>{{ row[3] }}</td>
-                    <td>{{ row[4] }}</td>
-                    <td>{{ row[5] }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</section>
 </body>
 </html>
